bestnewmusic2018/css/style.css
html{
min-height: 100%;
background: #4D444F;
padding: 0px;
}

canvas {
  width:100%;
  height:100%;
  position: fixed;
  top: 0;
  left: 0;
  /* z-index: -2; */
}

::selection{
  background-color: #E6A62D;
  color: #202225;
}

::-moz-selection{
  background-color: #E6A62D;
  color: #202225;
}

body {
background-image: linear-gradient(-180deg, #171319 0%, #40353E 100%);
    margin: 0px;
    font-family: 'Rubik', sans-serif;
    color: #FEFBFF;
    text-align: center;
    padding-bottom:40px;
}

svg, svg g{
  max-width: 90px;
  max-height: 50px;
  transition: 0.4s all;
  opacity: 0.5;
}

svg:hover{
  opacity: 1;
}

.intro{
  position: relative;
  margin: 0 auto;
  margin-top: 60px;
  margin-bottom: 100px;
  text-align: center;
  max-width: 700px;
  z-index: 100;
}

.intro span{
  opacity: 0.7;
  font-size: 30px;
  letter-spacing: 0.9em;
  padding-left: 0.9em;
  color: #E87D5F;
}

.intro h1{
  line-height: 78px;
  margin-bottom: 15px;
  letter-spacing: -5px;
  font-size: 90px;
  /* background: -webkit-linear-gradient(left, #E4C603 , yellow); */
  background: linear-gradient(-197deg, #EF07F3 0%, #E4C603 100%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

hr{
  margin-top: 45px;
  margin-bottom: 30px;
  border: none;
  height: 1px;
  color: rgba(255,255,255,0.4); /* old IE */
  background-color: rgba(255,255,255,0.4);
  opacity: 0.3;
  max-width: 700px;
}

.header{
  margin: 0 auto;
  padding-top: 43px;
  text-align: left;
  width: 100%;
  z-index: 100;
/* background-image: linear-gradient(-180deg, #131517 0%, rgba(18,21,23,0.00) 100%); */
height: 100px;
}

.header .logo{
  opacity: 0.4;
  transition: 0.5s all;
  margin-left: 32px;
}

.header .logo:hover{
  opacity: 0.7;
}

a{
  color: #FEFBFF;
  transition: 0.4s all;
}

a:hover{
  color: #EA5E86;
}

.header button{
  background: none;
  border: 2px solid #EF0DED;
  border-radius: 100px;
  transition: 0.4s all;
  color: #EF0DED;
  padding: 10px 25px;
  cursor: pointer;
}

.header button:hover{
  color: #FEFBFF;
  border: 2px solid #FEFBFF;
}


.header .logo{
  display: inline;
  height: 50px;
}

.header .navigation{
  display: inline;
  float: right;
  margin-top: 10px;
  margin-right: 30px;
}

.headline{
  padding-left: 20px;
  padding-right: 20px;
}

h1{
  font-family: 'Rubik', serif;
  font-size: 82px;
  font-weight: 700;
  line-height: 88px;
}

h1 span{
  color: #E87D5F;
}

.description p{
  margin: 0 auto;
  font-size: 18px;
  max-width: 600px;
  line-height: 35px;
  margin-top: 50px;
}

.list{
  margin-top: 100px;
}

.headline a{
  margin-left: 13px;
  color: #FEFBFF;
}

.headline a:hover{
  margin-left: 13px;
  color: #EA5E86;
}

.footerwrapper{
  margin-bottom: 0px;
  padding-bottom:30px;
  z-index: 100;
}

.footer a, .description a{
  color: #FEFBFF;
}

.footer a:hover, .description a:hover{
  color: #EA5E86;
}

.faded:hover{
  opacity: 0.6;
}

.items{
  vertical-align: top;
  z-index: 2;
}

.item{
background: transparent;
width: 540px;
display: inline-block;
margin-top: 30px;
position: relative;
opacity: 1;
text-align: center;
z-index: 2;
}

.item span{
  font-size: 12px;
}

.item:nth-child(1n+3){
margin-top: 100px;
}

.listen{
  display: block;
  margin: 0 auto;
  background: transparent;
  border: 2px solid #EA5E86;
  border-radius: 100px;
  text-decoration: none;
  color: #EA5E86;
  padding: 10px 30px;
  width: 150px;
  margin-top: 20px;
  font-size: 12px;
}

.listen svg, svg g{
  vertical-align: middle;
  margin-right: 5px;
  opacity: 1;
}

.listen span{
  margin-top: 2px;
}

.listen:hover{
  color: #FEFBFF;
  border-color: #FEFBFF;
}

.listen:hover > svg g{
  fill: #FEFBFF;
}

.linkOfItem:nth-child(even){
  margin-left: 3.5%;
}

.album-cover{
width: 301px;
height: 301px;
transition: all 0.4s ease;
margin: 0 auto;
background: #FEFBFF;
border-radius: 6px;
box-shadow: 0 1px 47px 0 rgba(0,0,0,0.21);
cursor: pointer;
position: relative;
top: 0;
margin-bottom: 14px;
background-color: #1C171E;
-webkit-background-size: cover;
-moz-background-size: cover;
-o-background-size: cover;
background-size: cover;
display: inline-block;
}

.album-description{
  display: block;
}

.album-cover:hover{
  top: -10px;
  box-shadow: 0 1px 100px 0 rgba(0,0,0,0.34);
}

.inactive .album-cover{
  opacity: 0.4s;
  cursor: auto;
  opacity: 0.4;
}
.inactive .album-cover:hover{
  top: 0;
  /* box-shadow: 0 1px 77px 0 rgba(64,73,85,0.2); */
}

.inactive span{
  opacity: 0.4;
}

.active .activespan{
  color: #FEFBFF;
}

.active-circle{
  display: inline;
  animation: fade 3s infinite;
}

@keyframes fade {
  0%,100% { opacity: 0 }
  50% { opacity: 1 }
}


.footer{
  margin-top: 50px;
}

#jan{
background-image: url('../img/months/jan.png');
}

#feb{
background-image: url("../img/months/feb.png");
}

#mar{
background-image: url("../img/months/mar.png");
}

#apr{
background-image: url("../img/months/apr.png");
}

#may{
background-image: url("../img/months/may.png");
}

#jun{
background-image: url("../img/months/jun.png");
}

#jul{
background-image: url("../img/months/jul.png");
}

#aug{
background-image: url("../img/months/aug.png");
}

#sep{
background-image: url("../img/months/sep.png");
}

#oct{
background-image: url("../img/months/oct.png");
}

#nov{
background-image: url("../img/months/nov.png");
}

#dec{
background-image: url("../img/months/dec.png");
}


.websiteFrame {
    position: fixed;
    z-index: 990;
    /* background-color: rgba(198, 250, 229, 1); */
    background: #E87D5F;
}

#websiteFrameTop {
    top: 0;
    left: 0;
    width: 100%;
    height: 5px;
}

#websiteFrameRight {
    top: 0;
    bottom: 0;
    right: 0;
    width: 5px;
}

#websiteFrameBottom {
    bottom: 0;
    left: 0;
    width: 100%;
    height: 5px;
}

#websiteFrameLeft {
    top: 0;
    bottom: 0;
    left: 0;
    width: 5px;
}



@media (max-width: 1200px){
  h1{
    font-size: 38px;
    line-height: 58px;
  }
  p{
      font-size: 14px;
      line-height: 25px;
  }
}

@media (max-width: 1030px){
  .item{
    width: 100%;
    text-align: center;
    height: auto;
    max-height: none;
    padding-top: 30px;
    padding-bottom: 30px;
  }

  .item:nth-child(1){
    margin-top: 0;
  }

  .linkOfItem:nth-child(even){
    margin-left: 0;
  }
}


@media (max-width: 600px){

  .header .logo{
    margin-left: 15px;
  }

  .intro{
    margin-top: 4px;
    margin-bottom: 0;
  }

  .intro h1{
    font-size: 50px;
    letter-spacing: 0px;
    line-height: 45px;
  }

  .intro span{
    font-size: 14px;
  }

  .description p{
    font-size: 13px;
    line-height: 28px;
    margin-top: 30px;
    padding: 40px 40px;
  }

  .list{
    margin-top: 40px;
  }

  .item:nth-child(1n+3){
    margin-top: 30px;
}

  .header{
    padding-top: 20px;
  }
  h1{
    font-size: 25px;
    line-height: 40px;
  }
  p{
      font-size: 14px;
      line-height: 24px;
  }
}

